@@ -74,7 +74,10 @@ WARNING: found a TeX cache dir in the deprecated location "%s".
 
         
     def get_prefix(self, tex):
-        return md5.md5(tex).hexdigest()
+        s = tex
+        if rcParams['text.tex.engine'] == 'latex':
+            s+='latex font: %s'%rcParams['font.latex.package']
+        return md5.md5(s).hexdigest()
         
     def get_tex_command(self, tex, fname):
 
